K8/backend-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - targetPort: 8001
      port: 8001
