K8/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - targetPort: 8002
      port: 8002
