K8/ingressConfig.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: / 
            backend:
              serviceName: client-cluster-ip
              servicePort: 8002
          - path: /api
            backend:
              serviceName: backend-cluster-ip-service
              servicePort: 8001
